Fix crash on unicode characters in PWA names in context menu

Bug: 822144
Change-Id: I810ee10d0f428f8893d90281079341101d7d8c04
Reviewed-on: https://chromium-review.googlesource.com/963956
Commit-Queue: Alan Cutter <alancutter@chromium.org>
Reviewed-by: Istiaque Ahmed <lazyboy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544949}
Former-commit-id: f9bbbe1a486850571e8ef8a8e0e3dd232e7632fa